<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.detail.DetailMainActivity">
    
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/barlayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        android:background="@android:color/darker_gray">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/app_name"
            app:titleTextColor="@color/black"/>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/barlayout"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_margin="@dimen/_8sdp">

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            app:srcCompat="@drawable/rounded_error"
            android:layout_marginBottom="@dimen/_30sdp"/>

        <TextView
            android:id="@+id/tvId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:text="@string/id"
            android:layout_marginBottom="@dimen/_10sdp"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:text="@string/name"
            android:layout_marginBottom="@dimen/_10sdp"/>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:text="@string/email_dummy"
            android:layout_marginBottom="@dimen/_10sdp"/>

        <Button
            android:layout_width="@dimen/_160sdp"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/contact"
            android:backgroundTint="@color/yellow"/>
    </LinearLayout>
</RelativeLayout>